swag student_group + dto model/student_group.go - naming
